# diff-cam

./: .env  README.md  imgui.ini  main.py  pyproject.toml  resources
.agent/rules/: run.md
algorithms/: eval.py  ppo.py
cam_env/: __init__.py  cam_env.py
docs/: design.md
runs/CamEnv-v0__ppo__1__1771269753/: events.out.tfevents.1771269753.Neil-Laptop.25018.0
runs/CamEnv-v0__ppo__1__1771269943/: events.out.tfevents.1771269943.Neil-Laptop.25473.0
runs/CamEnv-v0__ppo__1__1771270071/: events.out.tfevents.1771270071.Neil-Laptop.25749.0
runs/CamEnv-v0__ppo__1__1771270352/: events.out.tfevents.1771270352.Neil-Laptop.26011.0
runs/CamEnv-v0__ppo__1__1771270428/: events.out.tfevents.1771270428.Neil-Laptop.26164.0
runs/CamEnv-v0__ppo__1__1771270667/: events.out.tfevents.1771270667.Neil-Laptop.26374.0
runs/CamEnv-v0__ppo__1__1771271111/: events.out.tfevents.1771271111.Neil-Laptop.26803.0
runs/CamEnv-v0__ppo__1__1771271208/: events.out.tfevents.1771271208.Neil-Laptop.26929.0
runs/CamEnv-v0__ppo__1__1771271460/: events.out.tfevents.1771271460.Neil-Laptop.27204.0
runs/CamEnv-v0__ppo__1__1771271812/: events.out.tfevents.1771271812.Neil-Laptop.27886.0
runs/CamEnv-v0__ppo__1__1771272462/: events.out.tfevents.1771272462.Neil-Laptop.28398.0
runs/CamEnv-v0__ppo__1__1771273208/: events.out.tfevents.1771273208.Neil-Laptop.29043.0
runs/CamEnv-v0__ppo__1__1771273260/: events.out.tfevents.1771273260.Neil-Laptop.29175.0
scripts/: setup.sh  vnc
simulator/: paths.py  simulator.py
tests/: gpu_test.py  pufferlib_tests.py  simulator_test.py
(+29 files in other folders)
